# OpenDXMC

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists_2.txt  README.md
apps/: CMakeLists.txt  opendxmc.cpp
data/: bowtiefilters.json  bowtiefiltersTemplate.json  resources.rc
data/binaryimporttemplate/: template_generator.py
data/bowtiefilters/: bowtiefilters.json
data/phantoms/icrp/: README.txt
docs/: CMakeLists.txt  Doxyfile.in
include/libopendxmc/: colormap.h  dosereportcontainer.h  mainwindow.h  phantomselectionwidget.h  progressindicator.h  progresswidget.h  sourceeditorwidget.h
include/opendxmc/: binaryimportpipeline.h  binaryimportwidget.h  colormap.h  dicomimportwidget.h  dosereportcontainer.h  dosereportwidget.h  dxmc_specialization.h  exportwidget.h  h5wrapper.h  imagecontainer.h  imageimportpipeline.h  mainwindow.h  materialselectionwidget.h  opendxmcconfig.h  phantomimportpipeline.h  phantomselectionwidget.h  precision_specialization.h  progressindicator.h  progresswidget.h  qpathmanipulation.h  saveload.h  simulationpipeline.h  slicerenderinteractor.h  slicerenderwidget.h  sourceeditormodel.h  sourceeditorwidget.h  viewportwidget.h  volumeactorcontainer.h  volumerenderwidget.h  volumerenderwidgetsettings.h
src/: .directory  CMakeLists.txt  CMakeSettings.json  binaryimportpipeline.cpp  binaryimportwidget.cpp  colormap.cpp  dicomimportwidget.cpp  dosereportcontainer.cpp  dosereportwidget.cpp  exportwidget.cpp  h5wrapper.cpp  h5wrapper_test.cpp  imageimportpipeline.cpp  mainwindow.cpp  materialselectionwidget.cpp  phantomimportpipeline.cpp  phantomselectionwidget.cpp  progressindicator.cpp  progresswidget.cpp  saveload.cpp  simulationpipeline.cpp  slicerenderinteractor.cpp  slicerenderwidget.cpp  sourceeditormodel.cpp  sourceeditorwidget.cpp  stringmanipulation.cpp  viewportwidget.cpp  volumeactorcontainer.cpp  volumerenderwidget.cpp  volumerenderwidgetsettings.cpp
src/app/: CMakeLists.txt  basesettingswidget.cpp  basesettingswidget.hpp  beamsettingswidget.cpp  beamsettingswidget.hpp  ctdicomimportwidget.cpp  ctdicomimportwidget.hpp  mainwindow.cpp  mainwindow.hpp  opendxmc.cpp  otherphantomimportwidget.cpp  otherphantomimportwidget.hpp  statusbar.cpp  statusbar.hpp
src/dxmclib/: CMakeLists.txt
src/dxmclib/include/: attenuationlut.h  beamfilters.h  dxmcrandom.h  exposure.h  material.h  progressbar.h  source.h  transport.h  tube.h  vectormath.h  world.h
src/dxmclib/src/: attenuationlut.cpp  beamfilters.cpp  dxmcrandom.cpp  exposure.cpp  material.cpp  source.cpp  transport.cpp  tube.cpp  world.cpp
src/dxmclib/test/: CMakeLists.txt  attenuationlut.cpp  benchmark.cpp  loadxraylib.cpp  testdxmclib.cpp  testmaterial.cpp  testmaterials.cpp  testrandom.cpp  testrunner.cpp  testsource.cpp  testtube.cpp  testworld.cpp  validatedxmclib.cpp
src/libopendxmc/: CMakeLists.txt  basepipeline.cpp  basepipeline.hpp  beamactorcontainer.cpp  beamactorcontainer.hpp  beamsettingsdelegate.cpp  beamsettingsdelegate.hpp  beamsettingsmodel.cpp  beamsettingsmodel.hpp  beamsettingsview.cpp  beamsettingsview.hpp  bowtiefilterreader.cpp  bowtiefilterreader.hpp  colormap.cpp  colormaps.cpp  colormaps.hpp  ctaecplot.cpp  ctaecplot.hpp  ctimageimportpipeline.cpp  ctimageimportpipeline.hpp  ctorgansegmentatorpipeline.cpp  ctorgansegmentatorpipeline.hpp  ctsegmentationpipeline.cpp  ctsegmentationpipeline.hpp  custominteractorstyleimage.cpp  custominteractorstyleimage.hpp  datacontainer.cpp  datacontainer.hpp  dicomimportwidget.cpp  dosereportcontainer.cpp  dosereportwidget.cpp  dosereportwidget.h  dosetablepipeline.cpp  dosetablepipeline.hpp  dosetablewidget.cpp  dosetablewidget.hpp  dxmc_specialization.cpp  dxmc_specialization.hpp  h5io.cpp  h5io.hpp  (+39 more)
src/opendxmc/: CMakeLists.txt
src/opendxmc/resources/: bowtiefilters.json
src/opendxmc/resources/binaryimporttemplate/: template_generator.py
src/opendxmc/resources/phantoms/other/: Jo
src/opendxmc/src/: app.cpp  binaryimportpipeline.cpp  binaryimportpipeline.h  binaryimportwidget.cpp  binaryimportwidget.h  colormap.cpp  colormap.h  dicomimportwidget.cpp  dicomimportwidget.h  dosereportcontainer.cpp  dosereportcontainer.h  dosereportwidget.cpp  dosereportwidget.h  exportwidget.cpp  exportwidget.h  h5wrapper.cpp  h5wrapper.h  h5wrapper_test.cpp  imagecontainer.h  imageimportpipeline.cpp  imageimportpipeline.h  mainwindow.cpp  mainwindow.h  materialselectionwidget.cpp  materialselectionwidget.h  phantomselectionwidget.cpp  phantomselectionwidget.h  progressindicator.cpp  saveload.cpp  saveload.h  simulationpipeline.cpp  simulationpipeline.h  slicerenderwidget.cpp  slicerenderwidget.h  sourceeditormodel.cpp  sourceeditormodel.h  sourceeditorwidget.cpp  sourceeditorwidget.h  stringmanipulation.cpp  stringmanipulation.h  (+8 more)
src/vtkextension/: CMakeLists.txt
src/vtkextension/include/: imagethresholdmultiple.h
src/vtkextension/src/: imagethresholdmultiple.cpp
tests/: h5wrapper_test.cpp
utilities/: CMakeLists.txt  ircp110phantomconverter.cpp
